@@ -10,13 +10,13 @@ JDK_CHANGESET = d28f54a421b1
 LANGTOOLS_CHANGESET = 1316e51b3995
 OPENJDK_CHANGESET = 2108c94c0d3d
 
-CORBA_SHA256SUM = 8d0b3dcbc5e160b0909e66a7b2aaa5f0783892d7ce2df4b7c3a00bb4eee7e882
-HOTSPOT_SHA256SUM = 1d4643b4a8fb093403eca0bca69e8b6cabf5db4dc7df157650fdbd6f91580246
-JAXP_SHA256SUM = 9244b44984c255e54e37a4556c4985f5356bd611de536f2bae58f9aa1d82bb7d
-JAXWS_SHA256SUM = 44022c1546f6589f9bac6aa8079642aadf0c43e61afc074b841d3f6dd6e30609
-JDK_SHA256SUM = ba69d9e4cdd1a92bda3aaaf0fcabafa3663f01e19ee3575fd3d81c6c2027e653
-LANGTOOLS_SHA256SUM = 022e167d31a948cebe9ea163b4e3dafdc6d23acba16b40170b00c4b24f4a14d0
-OPENJDK_SHA256SUM = e2ce820b0da226ef334252469ba9e7a6186b35023f3c68751befaaffc6f86ee0
+CORBA_SHA256SUM = c13569b05931c858c0bb999e160aa89208b507ce5591b068d9b8b672fba34b19
+HOTSPOT_SHA256SUM = 6fd67e0875b0dbba01b0162c1660deee7642b53acd7358bc207f09ff5a2ad828
+JAXP_SHA256SUM = 5cbc5f855815cc327fc59452c87116521c2417d7bcbe42229fbb0f7a872dc691
+JAXWS_SHA256SUM = 9695be9ec5d394bd9212093f03c4064ce4cf29119163e66944692976700a1956
+JDK_SHA256SUM = 7fa59b0e0d803b603c176b1b1d34375adb417567e31a3735e6e229810266f027
+LANGTOOLS_SHA256SUM = 41d51de84b8865718fa9085f76bb2f64a2ec5af03d458a7fd2cf49c2fd5e4d7e
+OPENJDK_SHA256SUM = adb23e8fe1e2e4fd2f34cfdf57ede78aa3e6f983af113bb8fd7dfe073f343d17
 
 CACAO_VERSION = d6264eb66506
 CACAO_SHA256SUM = 94ea7899e806ccbc33a732b5113a8f969d8b1f4ce7ffd27cf04577054f65f63c
